--- a/css/styles.css
+++ b/css/styles.css
@@ -202,12 +202,12 @@ a {
   transition: background-color var(--normal) var(--easeOutSine);
 }
 
-/* .no-animations *,
+.no-animations *,
 .no-animations *::before,
 .no-animations *::after {
   animation: none !important;
   transition: none !important;
-} */
+}
 
 .hide-nav {
   transform: translateY(-100%);
@@ -346,7 +346,7 @@ a {
     justify-content: center;
     border-radius: 10px;
     transform: translateX(100vw);
-    transition: all var(--normal) var(--easeOutSine);
+    transition: transform var(--normal) var(--easeInOutSine);
     background-color: var(--light-violet);
     overflow: hidden;
   }
